= Highlight CHANGELOG
:reproducible:
:sectanchors:
:sectnums!:
:toc-title: Contents
:toc: left
:toclevels: 1

== highlight 4.9

09.10.2023

 - added support for Elm (https://gitlab.com/saalen/highlight/-/issues/237)
 - fixed Lua nested string deprecation error (https://gitlab.com/saalen/highlight/-/issues/238)


== highlight 4.8

28.08.2023

 - updated astyle lib to version 3.4.6
 - moved old yaml.lang to yaml-ansible.lang and added a new yaml definition (https://gitlab.com/saalen/highlight/-/issues/235)
 - omit size property in BBCode output if `--fragment` is set (https://gitlab.com/saalen/highlight/-/issues/234)
 - allowed font size unit with `--font-size` for HTML and ODT output (https://gitlab.com/saalen/highlight/-/merge_requests/145/)
 - GUI: updated JP translation (https://gitlab.com/saalen/highlight/-/merge_requests/144)


== highlight 4.7

17.07.2023

  - updated astyle lib to version 3.4.1
  - CLI: fixed member variable initialization (https://gitlab.com/saalen/highlight/-/merge_requests/143)


== highlight 4.6

11.05.2023

  - added  `--service-mode` option to run highlight as long running process (https://gitlab.com/saalen/highlight/-/merge_requests/140)
  - added extras/highlight-service.py as an example for the service mode
  - updated astyle lib to version 3.3
  - W32: added  `--disable-echo` option (https://gitlab.com/saalen/highlight/-/merge_requests/140)
  - W32: fixed output of ANSI sequences (https://gitlab.com/saalen/highlight/-/issues/194)


== highlight 4.5

14.03.2023

  - added support for Hare
  - fixed `--no-trailing-nl` option for LaTeX output (https://gitlab.com/saalen/highlight/-/issues/216)
  - fixed typos in rnc.lang, spn.lang and znn.lang (https://gitlab.com/saalen/highlight/-/merge_requests/139)
  - fixed missing ngerman package for `--replace-quotes` option (https://gitlab.com/saalen/highlight/-/issues/222)
  - fixed quotes highlighting in XML (https://gitlab.com/saalen/highlight/-/issues/226)