@@ -1389,7 +1389,7 @@ void ASBeautifier::registerContinuationIndent(const std::string& line, int i, in
 	// this is not done for an in-statement array
 	if (continuationIndentCount > maxContinuationIndent
 	        && !(prevNonLegalCh == '=' && currentNonLegalCh == '{'))
-		continuationIndentCount = indentLength * 2 + spaceIndentCount_;
+		continuationIndentCount = indentLength /* * 2*/ + spaceIndentCount_; // GH16
 
 	if (!continuationIndentStack->empty()
 	        && continuationIndentCount < continuationIndentStack->back())
@@ -2466,6 +2466,34 @@ int ASBeautifier::findObjCColonAlignment(const std::string& line) const
 	return -1;
 }
 
+/* chatgpt
+
+int ASBeautifier::findObjCColonAlignment(const std::string& line) const
+{
+    bool haveTernary = false;
+    for (char c : line)
+    {
+        if (c == ':' || c == '?')
+        {
+            if (c == '?')
+            {
+                haveTernary = true;
+                continue;
+            }
+
+            if (haveTernary)
+            {
+                haveTernary = false;
+                continue;
+            }
+
+            return &c - line.c_str(); // Calculate the index of the found character
+        }
+    }
+    return -1;
+}
+*/
+
 /**
  * Compute the spaceIndentCount necessary to align the current line colon
  * with the colon position in the argument.
@@ -2517,7 +2545,8 @@ int ASBeautifier::getObjCFollowingKeyword(const std::string& line, int bracePos)
 	size_t keyPos = line.find_first_not_of(" \t", objectEnd + 1);
 	if (keyPos == std::string::npos)
 		return 0;
-	return keyPos - firstText;
+
+    return static_cast<int>(keyPos - firstText); // Cast to int for return value
 }
 
 /**
@@ -2817,7 +2846,9 @@ void ASBeautifier::parseCurrentLine(const std::string& line)
 
 		prevNonSpaceCh = currentNonSpaceCh;
 		currentNonSpaceCh = ch;
-		if (!isLegalNameChar(ch) && ch != ',' && ch != ';')
+
+		// #SF 97
+		if (!isLegalNameChar(ch) /*&& ch != ',' && ch != ';'*/)
 		{
 			prevNonLegalCh = currentNonLegalCh;
 			currentNonLegalCh = ch;
@@ -2895,7 +2926,8 @@ void ASBeautifier::parseCurrentLine(const std::string& line)
 					        && prevNonSpaceCh != ']'
 					        && prevNonSpaceCh != ')'
 					        && prevNonSpaceCh != '*'  // GH #11
-					        && line.find(AS_AUTO, 0 ) == std::string::npos)
+					        //&& line.find(AS_AUTO, 0 ) == std::string::npos
+					   )
 					{
 						lambdaIndicator = true;
 					}
@@ -3325,6 +3357,8 @@ void ASBeautifier::parseCurrentLine(const std::string& line)
 		if (ch == '?')
 			isInQuestion = true;
 
+
+
 		// special handling of colons XXX 533
 		if (ch == ':')
 		{
@@ -3421,11 +3455,11 @@ void ASBeautifier::parseCurrentLine(const std::string& line)
 			}
 		}
 
-		if ((ch == ';' || (parenDepth > 0 && ch == ',')) && !continuationIndentStackSizeStack->empty())
+		if ((ch == ';' || (parenDepth > 0 && ch == ',')) && !continuationIndentStackSizeStack->empty()){
 			while ((int) continuationIndentStackSizeStack->back() + (parenDepth > 0 ? 1 : 0)
 			        < (int) continuationIndentStack->size())
 				continuationIndentStack->pop_back();
-
+		}
 		else if (ch == ',' && (isInEnum || isInStruct) && isNonInStatementArray && !continuationIndentStack->empty())
 			continuationIndentStack->pop_back();
 
@@ -3812,14 +3846,15 @@ void ASBeautifier::parseCurrentLine(const std::string& line)
 				if (foundNonAssignmentOp->length() > 1)
 					i += foundNonAssignmentOp->length() - 1;
 
-				// For C++ input/output, operator<< and >> should be
+				// For C++ input/output, operator<<, >> and . method calls should be
 				// aligned, if we are not in a statement already and
 				// also not in the "operator<<(...)" header line
 				if (!isInOperator
 				        && continuationIndentStack->empty()
 				        && isCStyle()
 				        && (foundNonAssignmentOp == &AS_GR_GR
-				            || foundNonAssignmentOp == &AS_LS_LS))
+				            || foundNonAssignmentOp == &AS_LS_LS
+                            || (foundNonAssignmentOp == &AS_DOT && line.find(AS_OPEN_PAREN, i) != std::string::npos)))
 				{
 					// this will be true if the line begins with the operator
 					if (i < foundNonAssignmentOp->length() && spaceIndentCount == 0)
@@ -3864,6 +3899,11 @@ void ASBeautifier::parseCurrentLine(const std::string& line)
 					{
 						if (i == 0 && spaceIndentCount == 0)
 							spaceIndentCount += indentLength;
+
+						// #SF 97
+						if (prevNonLegalCh == '=' && currentNonLegalCh == '=')
+							spaceIndentCount = 0;
+
 						registerContinuationIndent(line, i, spaceIndentCount, tabIncrementIn, 0, false);
 						isContinuation = true;
 					}
